Fixed position light/dark mode toggle and many minor adjustments

--- a/src/style/_component.back-to-top.scss
+++ b/src/style/_component.back-to-top.scss
@@ -11,7 +11,7 @@
   right: var(--floating-margin);
 
   margin: 0;
-
+  padding: 0;
   svg {
     color: var(--palette-stroke);
     background-color: var(--palette-fill);
