--- a/src/style/_component.color-scheme-toggle.scss
+++ b/src/style/_component.color-scheme-toggle.scss
@@ -4,7 +4,7 @@
   border: unset;
   background-color: unset;
 
-  position: absolute;
+  position: fixed;
   right: var(--floating-margin);
   top: var(--floating-margin);
 
